# swapmousebutton-rust

./: Cargo.toml  README.md  SwapMouseButton.rc  build.rs
src/: func.rs  main.rs
