[package]
name = "swapmousebutton"
version = "0.1.0"
authors = ["sndnvaps <admin@sndnvaps.com>"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

native-windows-gui = {version="1.0.12",features=["embed-resource"]}

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[build-dependencies]
embed-resource = "1.3"