[package]
name = "swapmousebutton"
version = "1.1.0"
authors = ["sndnvaps <admin@sndnvaps.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

native-windows-gui = "1.0.12" 

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[build-dependencies]
embed-resource = "3.0.5"
windows_exe_info = "0.5"